Test the API Status - Success

--- a/Web Application/ELPS/ELPS.Infrastructure/ELPS.Infrastructure.csproj
+++ b/Web Application/ELPS/ELPS.Infrastructure/ELPS.Infrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ELPS.Api\ELPS.Api.csproj" />
     <ProjectReference Include="..\ELPS.Application\ELPS.Application.csproj" />
   </ItemGroup>
 
