JWT Token Success Encode & Decode

--- a/Web Application/ELPS/ELPS.Api/appsettings.json
+++ b/Web Application/ELPS/ELPS.Api/appsettings.json
@@ -8,5 +8,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=CHAMINDU-SSD-LT\\SQLEXPRESS; Initial Catalog=WildOffice; TrustServerCertificate=True; User Id=sa; Password=123;"
   },
+  "jwtConfig": {
+    "Key": "jxsjaG7E2vG7Tl6pPK7VkDwBOXnMLzeuTAthSYyq7ek",
+    "DKFSODV98SI2": null,
+    "Duration": "1"
+  },
   "AllowedHosts": "*"
 }
